added slack signup

--- a/web.config
+++ b/web.config
@@ -14,4 +14,8 @@
       </environmentVariables>
     </httpPlatform>
   </system.webServer>
+  <appSettings>
+    <add key="SlackToken" value="xoxp-4723936446-4745755869-32328436692-4eb487eb51"/>
+    <add key="SlackOrg" value="notswani"/>
+  </appSettings>
 </configuration>
