--- a/web.config
+++ b/web.config
@@ -15,7 +15,7 @@
     </httpPlatform>
   </system.webServer>
   <appSettings>
-    <add key="SlackToken" value="xoxp-4723936446-4745755869-32328436692-4eb487eb51"/>
-    <add key="SlackOrg" value="notswani"/>
+    <add key="SlackToken" value="FILL IN WITH REAL SLACK TOKEN/>
+    <add key="SlackOrg" value="wpgdotnet"/>
   </appSettings>
 </configuration>
