move slack token and org to environment variables

--- a/web.config
+++ b/web.config
@@ -11,11 +11,9 @@
               arguments="%HOME%\site\wwwroot\app.azure.fsx port=%HTTP_PLATFORM_PORT%" >
       <environmentVariables>
         <environmentVariable name="WhateverYouLike" value="GoesHere"/>
+        <environmentVariable name="SLACK_TOKEN" value="FILL IN WITH REAL SLACK TOKEN"/>
+        <environmentVariable name="SLACK_ORG" value="wpgdotnet"/>
       </environmentVariables>
     </httpPlatform>
   </system.webServer>
-  <appSettings>
-    <add key="SlackToken" value="FILL IN WITH REAL SLACK TOKEN/>
-    <add key="SlackOrg" value="wpgdotnet"/>
-  </appSettings>
 </configuration>
